# market_growth

./: .gitignore  README.md  pyproject.toml
app/: .dockerignore  Dockerfile  main.py
app/agents/: trend_agent.py  triage_agent.py
app/tools/: web_search.py
examples/basic/: hello_world_gpt_5.py
